testsuite/tests/typing-gadts/pr6690.ml.principal.reference

#                   type 'a visit_action
type insert
type 'a local_visit_action
type ('a, 'result, 'visit_action) context =
    Local : ('a, 'a * insert, 'a local_visit_action) context
  | Global : ('a, 'a, 'a visit_action) context
#             Characters 137-143:
    | Global -> fun _ -> raise Exit
      ^^^^^^
Error: This pattern matches values of type ($1, $1, visit_action) context
       but a pattern was expected which matches values of type
         ($0, $0 * insert, visit_action) context
       Type $1 is not compatible with type $0 
#             Characters 145-151:
    | Global -> fun _ -> raise Exit
      ^^^^^^
Error: This pattern matches values of type ($1, $1, visit_action) context
       but a pattern was expected which matches values of type
         ($0, $0 * insert, visit_action) context
       Type $1 is not compatible with type $0 
#             val vexpr : (unit, 'a, 'b) context -> unit -> 'b = <fun>
# 
